# Microphone

./: README.md  pyproject.toml  transcribe.py  transcribe_test.py
microphone/: transcribe.py  transcribe_test.py
